--- a/4.1.1/Dockerfile
+++ b/4.1.1/Dockerfile
@@ -1,5 +1,6 @@
 # GlassFish on Docker
-FROM glassfish/openjdk 
+#FROM glassfish/openjdk 
+FROM anapsix/alpine-java
 
 # Maintainer
 MAINTAINER Bruno Borges <bruno.borges@oracle.com>
